# documentius

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json  requirements.txt  run.py
.github/workflows/: release.yml
data/icons/: generate_icon.py
documentius/: i18n.py  main.py  models.py  pdf_ops.py  signatures.py  theme.py
documentius/widgets/: ann_layer.py  page_canvas.py  page_panel.py  sig_dialog.py  sig_picker.py  toolbar.py  viewer.py
packaging/: io.github.scerelli.Documentius.desktop  io.github.scerelli.Documentius.metainfo.xml
packaging/flatpak/: io.github.scerelli.Documentius.json  update-sources.sh
scripts/: build-local.sh  prepare_release.py
